deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app
  

spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world-container
        image: asia-south2-docker.pkg.dev/ankit-44881/hello-world-repo/hello-world-app:v1
        ports:
        - containerPort: 8080
