service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service2
spec:
  selector:
    app: hello-world2
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
